debugging, editing style, giving some new logic